переделана структура под БЭМ

--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,7 @@
         </li>
       </ol>
     </section>
-      <section class="live-example">
+      <section class="page__live-example live-example">
           <div class="live-example__wrapper container">
           <h2 class="live-example__title">Живой пример</h2>
           <p class="live-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой
