--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,152 +52,152 @@
   <main class="main-catalog">
     <section class="page__products products container">
       <h1 class="products__title">Каталог продукции</h1>
-      <ul class="products__list">
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+      <ul class="products__card-list">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="161" height="172" type="image/png" media="(min-width: 768px)" srcset="images/product-chicken-500-tablet(desktop)@1x.png 1x, images/product-chicken-500-tablet(desktop)@2x.png 2x">
-                <img class="products__image" src="images/product-chicken-500-mobile@1x.png" srcset="images/product-chicken-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="86">
+                <img class="products-card__image" src="images/product-chicken-500-mobile@1x.png" srcset="images/product-chicken-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="86">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy PRO 500 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">500 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Курица</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">700 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy PRO 500 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">500 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Курица</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">700 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-chicken-1000-desktop@1x.png 1x, images/product-chicken-1000-desktop@2x.png 2x">
                 <source width="168" height="206" type="image/png" media="(min-width: 768px)" srcset="images/product-chicken-1000-tablet@1x.png 1x, images/product-chicken-1000-tablet@2x.png 2x">
-                <img class="products__image" src="images/product-chicken-1000-mobile@1x.png" srcset="images/product-chicken-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
+                <img class="products-card__image" src="images/product-chicken-1000-mobile@1x.png" srcset="images/product-chicken-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy PRO 1000 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">1000 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Курица</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">1000 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy PRO 1000 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">1000 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Курица</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">1000 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="163" height="174" type="image/png" media="(min-width: 768px)" srcset="images/product-fish-500-tablet(desktop)@1x.png 1x, images/product-fish-500-tablet(desktop)@2x.png 2x">
-                <img class="products__image" src="images/product-fish-500-mobile@1x.png" srcset="images/product-fish-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="78">
+                <img class="products-card__image" src="images/product-fish-500-mobile@1x.png" srcset="images/product-fish-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="78">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy PRO 500 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">500 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Рыба</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">700 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy PRO 500 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">500 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Рыба</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">700 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="168" height="200" type="image/png" media="(min-width: 768px)" srcset="images/product-fish-1000-tablet@1x.png 1x, images/product-fish-1000-tablet@2x.png 2x">
-                <img class="products__image" src="images/product-fish-1000-mobile@1x.png" srcset="images/product-fish-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
+                <img class="products-card__image" src="images/product-fish-1000-mobile@1x.png" srcset="images/product-fish-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy PRO 1000 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">1000 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Рыба</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">1000 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy PRO 1000 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">1000 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Рыба</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">1000 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="161" height="171" type="image/png" media="(min-width: 768px)" srcset="images/product-buckwheat-500-tablet(desktop)@1x.png 1x, images/product-buckwheat-500-tablet(desktop)@2x.png 2x">
-                <img class="products__image" src="images/product-buckwheat-500-mobile@1x.png" srcset="images/product-buckwheat-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="68" height="78">
+                <img class="products-card__image" src="images/product-buckwheat-500-mobile@1x.png" srcset="images/product-buckwheat-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="68" height="78">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy SLIM 500 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">500 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Гречка</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">400 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy SLIM 500 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">500 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Гречка</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">400 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-buckwheat-1000-desktop@1x.png 1x, images/product-buckwheat-1000-desktop@2x.png 2x">
                 <source width="168" height="200" type="image/png" media="(min-width: 768px)" srcset="images/product-buckwheat-1000-tablet@1x.png 1x, images/product-buckwheat-1000-tablet@2x.png 2x">
-                <img class="products__image" src="images/product-buckwheat-1000-mobile@1x.png" srcset="images/product-buckwheat-1000-mobile@2x.png 2x" alt="Cat Energy SLIM 1000 г" width="84" height="100">
+                <img class="products-card__image" src="images/product-buckwheat-1000-mobile@1x.png" srcset="images/product-buckwheat-1000-mobile@2x.png 2x" alt="Cat Energy SLIM 1000 г" width="84" height="100">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy SLIM 1000 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">1000 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Гречка</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">700 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy SLIM 1000 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">1000 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Гречка</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">700 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item">
-          <a class="products__image-link" href="#">
-            <div class="products__item-wrap">
+        <li class="products-card">
+          <a class="products-card__image-link" href="#">
+            <div class="products-card__wrap">
               <picture>
                 <source width="163" height="174" type="image/png" media="(min-width: 768px)" srcset="images/product-rice-500-tablet(desktop)@1x.png 1x, images/product-rice-500-tablet(desktop)@2x.png 2x">
-                <img class="products__image" src="images/product-rice-500-mobile@1x.png" srcset="images/product-rice-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="72" height="84">
+                <img class="products-card__image" src="images/product-rice-500-mobile@1x.png" srcset="images/product-rice-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="72" height="84">
               </picture>
             </div>
           </a>
-          <a class="products__title-link" href="#">Cat Energy SLIM 500 г</a>
-          <dl class="products__item-details">
-            <dt class="products__item-details-name">Масса</dt>
-            <dd class="products__item-detail">500 г</dd>
-            <dt class="products__item-details-name">Вкус</dt>
-            <dd class="products__item-detail">Рис</dd>
-            <dt class="products__item-details-name">Цена</dt>
-            <dd class="products__item-detail">500 ₽</dd>
+          <a class="products-card__title-link" href="#">Cat Energy SLIM 500 г</a>
+          <dl class="products-card__details">
+            <dt class="products-card__details-name">Масса</dt>
+            <dd class="products-card__detail">500 г</dd>
+            <dt class="products-card__details-name">Вкус</dt>
+            <dd class="products-card__detail">Рис</dd>
+            <dt class="products-card__details-name">Цена</dt>
+            <dd class="products-card__detail">500 ₽</dd>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
-        <li class="products__item products__item--more">
-          <p class="products__more-title">Показать еще 100500 товаров</p>
-          <p class="products__more-text">На самом деле вкусов гораздо больше!</p>
+        <li class="products-card products-card--more">
+          <p class="products-card__more-title">Показать еще 100500 товаров</p>
+          <p class="products-card__more-text">На самом деле вкусов гораздо больше!</p>
           <a class="button button-general button-general--show-all" href="#">Показать все</a>
         </li>
       </ul>
