--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,13 @@
   <meta charset="UTF-8">
   <title>CAT ENERGY. CATALOG</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -57,6 +63,8 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="161" height="172" type="image/webp" media="(min-width: 768px)" srcset="images/product-chicken-500-tablet(desktop)@1x.webp 1x, images/product-chicken-500-tablet(desktop)@2x.webp 2x">
+                <source width="68" height="86" type="image/webp" srcset="images/product-chicken-500-mobile@1x.webp 1x, images/product-chicken-500-mobile@2x.webp 2x">
                 <source width="161" height="172" type="image/png" media="(min-width: 768px)" srcset="images/product-chicken-500-tablet(desktop)@1x.png 1x, images/product-chicken-500-tablet(desktop)@2x.png 2x">
                 <img class="products-card__image" src="images/product-chicken-500-mobile@1x.png" srcset="images/product-chicken-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="86">
               </picture>
@@ -64,12 +72,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy PRO 500 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">500 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Курица</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">700 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">500 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Курица</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">700 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
@@ -77,6 +91,9 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="172" height="196" type="image/webp" media="(min-width: 1440px)" srcset="images/product-chicken-1000-desktop@1x.webp 1x, images/product-chicken-1000-desktop@2x.webp 2x">
+                <source width="168" height="206" type="image/webp" media="(min-width: 768px)" srcset="images/product-chicken-1000-tablet@1x.webp 1x, images/product-chicken-1000-tablet@2x.webp 2x">
+                <source width="84" height="100" type="image/webp" srcset="images/product-chicken-1000-mobile@1x.webp 1x, images/product-chicken-1000-mobile@2x.webp 2x">
                 <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-chicken-1000-desktop@1x.png 1x, images/product-chicken-1000-desktop@2x.png 2x">
                 <source width="168" height="206" type="image/png" media="(min-width: 768px)" srcset="images/product-chicken-1000-tablet@1x.png 1x, images/product-chicken-1000-tablet@2x.png 2x">
                 <img class="products-card__image" src="images/product-chicken-1000-mobile@1x.png" srcset="images/product-chicken-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
@@ -85,12 +102,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy PRO 1000 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">1000 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Курица</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">1000 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">1000 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Курица</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">1000 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
@@ -98,6 +121,8 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="163" height="174" type="image/webp" media="(min-width: 768px)" srcset="images/product-fish-500-tablet(desktop)@1x.webp 1x, images/product-fish-500-tablet(desktop)@2x.webp 2x">
+                <source width="68" height="78" type="image/webp" srcset="images/product-fish-500-mobile@1x.webp 1x, images/product-fish-500-mobile@2x.webp 2x">
                 <source width="163" height="174" type="image/png" media="(min-width: 768px)" srcset="images/product-fish-500-tablet(desktop)@1x.png 1x, images/product-fish-500-tablet(desktop)@2x.png 2x">
                 <img class="products-card__image" src="images/product-fish-500-mobile@1x.png" srcset="images/product-fish-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="78">
               </picture>
@@ -105,12 +130,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy PRO 500 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">500 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Рыба</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">700 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">500 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Рыба</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">700 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
@@ -118,6 +149,10 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="172" height="196" type="image/webp" media="(min-width: 1440px)" srcset="images/product-fish-1000-desktop@1x.webp 1x, images/product-fish-1000-desktop@2x.webp 2x">
+                <source width="168" height="200" type="image/webp" media="(min-width: 768px)" srcset="images/product-fish-1000-tablet@1x.webp 1x, images/product-fish-1000-tablet@2x.webp 2x">
+                <source width="84" height="100" type="image/webp" srcset="images/product-fish-1000-mobile@1x.webp 1x, images/product-fish-1000-mobile@2x.webp 2x">
+                <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-fish-1000-desktop@1x.png 1x, images/product-fish-1000-desktop@2x.png 2x">
                 <source width="168" height="200" type="image/png" media="(min-width: 768px)" srcset="images/product-fish-1000-tablet@1x.png 1x, images/product-fish-1000-tablet@2x.png 2x">
                 <img class="products-card__image" src="images/product-fish-1000-mobile@1x.png" srcset="images/product-fish-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
               </picture>
@@ -125,12 +160,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy PRO 1000 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">1000 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Рыба</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">1000 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">1000 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Рыба</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">1000 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
@@ -138,6 +179,8 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="161" height="171" type="image/webp" media="(min-width: 768px)" srcset="images/product-buckwheat-500-tablet(desktop)@1x.webp 1x, images/product-buckwheat-500-tablet(desktop)@2x.webp 2x">
+                <source width="68" height="78" type="image/webp" srcset="images/product-buckwheat-500-mobile@1x.webp 1x, images/product-buckwheat-500-mobile@2x.webp 2x">
                 <source width="161" height="171" type="image/png" media="(min-width: 768px)" srcset="images/product-buckwheat-500-tablet(desktop)@1x.png 1x, images/product-buckwheat-500-tablet(desktop)@2x.png 2x">
                 <img class="products-card__image" src="images/product-buckwheat-500-mobile@1x.png" srcset="images/product-buckwheat-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="68" height="78">
               </picture>
@@ -145,12 +188,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy SLIM 500 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">500 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Гречка</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">400 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">500 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Гречка</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">400 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
@@ -158,6 +207,9 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="172" height="196" type="image/webp" media="(min-width: 1440px)" srcset="images/product-buckwheat-1000-desktop@1x.webp 1x, images/product-buckwheat-1000-desktop@2x.webp 2x">
+                <source width="168" height="200" type="image/webp" media="(min-width: 768px)" srcset="images/product-buckwheat-1000-tablet@1x.webp 1x, images/product-buckwheat-1000-tablet@2x.webp 2x">
+                <source width="84" height="100" type="image/webp" srcset="images/product-buckwheat-1000-mobile@1x.webp 1x, images/product-buckwheat-1000-mobile@2x.webp 2x">
                 <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-buckwheat-1000-desktop@1x.png 1x, images/product-buckwheat-1000-desktop@2x.png 2x">
                 <source width="168" height="200" type="image/png" media="(min-width: 768px)" srcset="images/product-buckwheat-1000-tablet@1x.png 1x, images/product-buckwheat-1000-tablet@2x.png 2x">
                 <img class="products-card__image" src="images/product-buckwheat-1000-mobile@1x.png" srcset="images/product-buckwheat-1000-mobile@2x.png 2x" alt="Cat Energy SLIM 1000 г" width="84" height="100">
@@ -166,12 +218,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy SLIM 1000 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">1000 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Гречка</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">700 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">1000 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Гречка</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">700 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
@@ -179,6 +237,8 @@
           <a class="products-card__image-link" href="#">
             <div class="products-card__wrap">
               <picture>
+                <source width="163" height="174" type="image/webp" media="(min-width: 768px)" srcset="images/product-rice-500-tablet(desktop)@1x.webp 1x, images/product-rice-500-tablet(desktop)@2x.webp 2x">
+                <source width="72" height="84" type="image/webp" srcset="images/product-rice-500-mobile@1x.webp 1x, images/product-rice-500-mobile@2x.webp 2x">
                 <source width="163" height="174" type="image/png" media="(min-width: 768px)" srcset="images/product-rice-500-tablet(desktop)@1x.png 1x, images/product-rice-500-tablet(desktop)@2x.png 2x">
                 <img class="products-card__image" src="images/product-rice-500-mobile@1x.png" srcset="images/product-rice-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="72" height="84">
               </picture>
@@ -186,12 +246,18 @@
           </a>
           <a class="products-card__title-link" href="#">Cat Energy SLIM 500 г</a>
           <dl class="products-card__details">
-            <dt class="products-card__details-name">Масса</dt>
-            <dd class="products-card__detail">500 г</dd>
-            <dt class="products-card__details-name">Вкус</dt>
-            <dd class="products-card__detail">Рис</dd>
-            <dt class="products-card__details-name">Цена</dt>
-            <dd class="products-card__detail">500 ₽</dd>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Масса</dt>
+              <dd class="products-card__detail">500 г</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Вкус</dt>
+              <dd class="products-card__detail">Рис</dd>
+            </div>
+            <div class="products-card__details-wrap">
+              <dt class="products-card__details-name">Цена</dt>
+              <dd class="products-card__detail">500 ₽</dd>
+            </div>
           </dl>
           <a class="button button-general button-general--order-catalog" href="#">Заказать</a>
         </li>
