--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
         </ul>
     </nav>
     </div>
-      <section class="main-header__hero hero hero--background">
+      <section class="main-header__hero hero hero--mobile-background">
         <h1 class="hero__title">Функциональное<br>питание для котов</h1>
       <p class="hero__subtitle">Занялся собой? Займись котом!</p>
       <div class="hero__image-wrap">
@@ -66,11 +66,11 @@
           <img class="hero__image" src="images/hero-image-mobile@1x.png" srcset="images/hero-image-mobile@2x.png 2x" alt="Баночка продукции Кэт Энерджи" width="280" height="270">
       </picture>
       </div>
-      <a class="button button-general button-general--find-programm button-general--mobile" href="#">Подобрать программу</a>
+      <a class="button-general button-general--find-programm" href="find-program.html">Подобрать программу</a>
     </section>
     </div>
   </header>
-  <main>
+  <main class="main-content">
     <section class="page__catalog catalog container">
       <h2 class="visually-hidden">Выбор каталога</h2>
       <ul class="catalog__list">
@@ -78,14 +78,14 @@
             <p class="catalog__item-title">Похудение</p>
           <p class="catalog__item-text">Ваш кот весит больше собаки и почти утратил способность
             лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="catalog__item-link" href="#">Каталог slim</a>
+          <a class="catalog__item-link" href="catalog-slim.html">Каталог slim</a>
         </li>
         <li class="catalog__item catalog__item--pro">
             <p class="catalog__item-title">Набор массы</p>
           <p class="catalog__item-text">Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить
             необходимые мышцы!</p>
-          <a class="catalog__item-link" href="#">Каталог pro</a>
+          <a class="catalog__item-link" href="catalog-pro.html">Каталог pro</a>
         </li>
       </ul>
     </section>
@@ -132,6 +132,7 @@
         </div>
         <div class="live-example__slider">
           <div class="slider">
+            <h3 class="visually-hidden">Слайдер для сравнения вашего кота до и после перехода на корм Cat Energy Slim</h3>
             <div class="slider__image-wrapper slider__image-wrapper--over" style="width: 50%">
             <picture>
               <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/cat-fat-tablet(desktop)@1x.webp 1x, images/images/cat-fat-tablet(desktop)@2x.webp 2x">
@@ -143,7 +144,7 @@
           <div class="slider__image-wrapper slider__image-wrapper--under">
             <picture>
               <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/cat-slim-tablet(desktop)@1x.webp 1x, images/images/cat-slim-tablet(desktop)@2x.webp 2x">
-              <source width="280" height="256" type="image/webp" srcset="images/cat-fat-mobile@1x.webp 1x, images/images/cat-fat-mobile@2x.webp 2x">
+              <source width="280" height="256" type="image/webp" srcset="images/cat-slim-mobile@1x.webp 1x, images/images/cat-slim-mobile@2x.webp 2x">
               <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/cat-slim-tablet(desktop)@1x.png 1x, images/cat-slim-tablet(desktop)@2x.png 2x">
               <img class="slider__image" src="images/cat-slim-mobile@1x.png" srcset="images/cat-slim-mobile@2x.png 2x" alt="Худой котик" width="280" height="256" loading="lazy">
             </picture>
@@ -162,6 +163,7 @@
         </div>
       </div>
       <div class="contacts__map-wrapper">
+        <h3 class="visually-hidden">Карта расположения магазина Cat Energy</h3>
         <iframe class="contacts__remote-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499.65095500796065!2d30.32262650998442!3d59.93871593800417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1715240796731!5m2!1sru!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
@@ -176,17 +178,17 @@
       </a>
       <ul class="main-footer__socials socials">
         <li class="socials__item">
-          <a class="socials__link socials__link--vk" href="#">
+          <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Ссылка на страницу В контакте</span>
           </a>
         </li>
         <li class="socials__item">
-          <a class="socials__link socials__link--youtube" href="#">
+          <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">Ссылка на Ютуб-канал</span>
           </a>
         </li>
         <li class="socials__item">
-          <a class="socials__link socials__link--telegram" href="#">
+          <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Ссылка на Телеграм-канал</span>
           </a>
         </li>
