Исправления для допуска (#15)
* Добавлена растровая графика webp

* Доработки для переполнения

* Доделки под pp и корректное переполнение

* Сделана оптимизация загрузки шрифтов

* недольшие доработки по фонам в index

* Переделки в классе button и sticky footer

* Добавлены ссылки на страницы

* Удален лишний css

* Доделки под pp

* Доделки по pp

* Исправления для повторного допуска

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -322,7 +322,7 @@
       <h2 class="visually-hidden">Адрес главного штаба кэт энерджи</h2>
       <div class="contacts__card contacts__card--catalog">
         <p class="contacts__card-title">Приглашаем<br>к сотрудничеству дилеров!</p>
-        <div class="contacts_address-wrap">
+        <div class="contacts__address-wrap">
           <address class="contacts__card-adress">ул. Большая Конюшенная, д. 19/8</address>
           <address class="contacts__card-town">Санкт-Петербург</address>
         </div>
