--- a/source/index.html
+++ b/source/index.html
@@ -135,16 +135,16 @@
             <h3 class="visually-hidden">Слайдер для сравнения вашего кота до и после перехода на корм Cat Energy Slim</h3>
             <div class="slider__image-wrapper slider__image-wrapper--over" style="width: 50%">
             <picture>
-              <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/cat-fat-tablet(desktop)@1x.webp 1x, images/images/cat-fat-tablet(desktop)@2x.webp 2x">
-              <source width="280" height="256" type="image/webp" srcset="images/cat-fat-mobile@1x.webp 1x, images/images/cat-fat-mobile@2x.webp 2x">
+              <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/cat-fat-tablet(desktop)@1x.webp 1x, images/cat-fat-tablet(desktop)@2x.webp 2x">
+              <source width="280" height="256" type="image/webp" srcset="images/cat-fat-mobile@1x.webp 1x, images/cat-fat-mobile@2x.webp 2x">
               <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/cat-fat-tablet(desktop)@1x.png 1x, images/cat-fat-tablet(desktop)@2x.png 2x">
               <img class="slider__image" src="images/cat-fat-mobile@1x.png" srcset="images/cat-fat-mobile@2x.png 2x" alt="Полный котик" width="280" height="256" loading="lazy">
               </picture>
           </div>
           <div class="slider__image-wrapper slider__image-wrapper--under">
             <picture>
-              <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/cat-slim-tablet(desktop)@1x.webp 1x, images/images/cat-slim-tablet(desktop)@2x.webp 2x">
-              <source width="280" height="256" type="image/webp" srcset="images/cat-slim-mobile@1x.webp 1x, images/images/cat-slim-mobile@2x.webp 2x">
+              <source width="560" height="512" type="image/webp" media="(min-width: 768px)" srcset="images/cat-slim-tablet(desktop)@1x.webp 1x, images/cat-slim-tablet(desktop)@2x.webp 2x">
+              <source width="280" height="256" type="image/webp" srcset="images/cat-slim-mobile@1x.webp 1x, images/cat-slim-mobile@2x.webp 2x">
               <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/cat-slim-tablet(desktop)@1x.png 1x, images/cat-slim-tablet(desktop)@2x.png 2x">
               <img class="slider__image" src="images/cat-slim-mobile@1x.png" srcset="images/cat-slim-mobile@2x.png 2x" alt="Худой котик" width="280" height="256" loading="lazy">
             </picture>
@@ -157,7 +157,7 @@
       <h2 class="visually-hidden">Адрес главного штаба кэт энерджи</h2>
       <div class="contacts__card">
         <p class="contacts__card-title">Приглашаем<br>к сотрудничеству дилеров!</p>
-        <div class="contacts_address-wrap">
+        <div class="contacts__address-wrap">
           <address class="contacts__card-adress">ул. Большая Конюшенная, д. 19/8</address>
           <address class="contacts__card-town">Санкт-Петербург</address>
         </div>
