--- a/source/index.html
+++ b/source/index.html
@@ -54,8 +54,12 @@
     </nav>
     </div>
       <section class="main-header__hero hero hero--mobile-background">
-        <h1 class="hero__title">Функциональное<br>питание для котов</h1>
-      <p class="hero__subtitle">Занялся собой? Займись котом!</p>
+        <div class="hero__title-wrap">
+          <h1 class="hero__title">Функциональное<br>питание для котов</h1>
+        </div>
+        <div class="hero__subtitle-wrap">
+          <p class="hero__subtitle">Занялся собой? Займись котом!</p>
+        </div>
       <div class="hero__image-wrap">
         <picture>
           <source width="552" height="499" type="image/webp" media="(min-width: 1440px)" srcset="images/hero-image-desktop@1x.webp 1x, images/hero-image-desktop@2x.webp 2x">
@@ -102,7 +106,7 @@
           <p class="how-it-works__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="how-it-works__item how-it-works__item--clock">
-          <p class="how-it-works__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p class="how-it-works__text">Уже через месяц наслаждайтесь изменениями к лучшему <br class="how-it-works_item-clock-br">вашего питомца!</p>
         </li>
       </ol>
     </section>
